@@ -1994,10 +1994,70 @@ register_check_parameters(
     match_type = 'dict',
 )
 
+
+register_check_parameters(
+    subgroup_applications,
+    "ruckus_mac",
+    _("Ruckus Spot Unique MAC addresses"),
+    Dictionary(
+        elements = [
+            ("inside", Dictionary(
+                title = _("Inside unique MACs"),
+                elements = [
+                    ( "levels_upper",
+                        Tuple(
+                            title = _("Upper levels"),
+                            elements = [
+                                Integer(title = _("Warning at") ),
+                                Integer(title = _("Critical at")),
+                            ],
+                        ),
+                    ),
+                    ( "levels_lower",
+                        Tuple(
+                            title = _("Lower levels"),
+                            elements = [
+                                Integer(title = _("Warning if below")),
+                                Integer(title = _("Critical if below")),
+                            ],
+                        ),
+                    ),
+                ]
+            )),
+            ("outside", Dictionary(
+                title = _("Outside unique MACs"),
+                elements = [
+                    ( "levels_upper",
+                        Tuple(
+                            title = _("Upper levels"),
+                            elements = [
+                                Integer(title = _("Warning at") ),
+                                Integer(title = _("Critical at")),
+                            ],
+                        ),
+                    ),
+                    ( "levels_lower",
+                        Tuple(
+                            title = _("Lower levels"),
+                            elements = [
+                                Integer(title = _("Warning if below")),
+                                Integer(title = _("Critical if below")),
+                            ],
+                        ),
+                    ),
+                ]
+            )),
+        ],
+    ),
+    None,
+    "dict"
+)
+
+
 register_check_parameters(
     subgroup_applications,
     "ruckus_ap",
-    _("Ruckus Access Points"),
+    _("Ruckus Spot Access Points"),
     Tuple(
         elements = [
             Optional(
